# ui-examples

./: README.md
single_window/: README.md
single_window/rust/: Cargo.toml
single_window/rust/src/: lib.rs
single_window/ui/src/: index.html
single_window/ui/src-tauri/: Cargo.toml  tauri.conf.json
single_window/ui/src-tauri/src/: lib.rs
tabs/: README.md
tabs/examples/: bom.csv
tabs/rust/: Cargo.toml
tabs/rust/src/: lib.rs
tabs/ui/: Cargo.toml
tabs/ui/src/: main.rs
